--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Lanchonete.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mssql-jdbc-7.0.0.jre8.jar=C:\\Users\\aluno.EXPERT\\Documents\\Microsoft JDBC Driver 7.0 for SQL Server\\sqljdbc_7.0\\ptb\\mssql-jdbc-7.0.0.jre8.jar
+file.reference.UGComp.jar=C:\\Users\\lgdal\\Documents\\NetBeansProjects\\vendasBL\\bibliotecas\\UGComp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.UGComp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
