--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.mssql-jdbc-7.0.0.jre8.jar=C:\\Users\\lgdal\\Documents\\NetBeansProjects\\lanchonete\\Microsoft JDBC Driver 7.0 for SQL Server
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\lgdal\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
