--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Lanchonete
+application.vendor=lgdal
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Lanchonete.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-7.0.0.jre8.jar=C:\\Users\\aluno.EXPERT\\Documents\\Microsoft JDBC Driver 7.0 for SQL Server\\sqljdbc_7.0\\ptb\\mssql-jdbc-7.0.0.jre8.jar
 file.reference.UGComp.jar=C:\\Users\\lgdal\\Documents\\NetBeansProjects\\vendasBL\\bibliotecas\\UGComp.jar
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lanchonete.Lanchonete
+main.class=lanchonete.forms.FormPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
